<resources>
    <string name="app_name">FinalAssement</string>
    <string name="username_login">username</string>
    <string name="password_login">password</string>
    <string name="submit_button_text">Submit</string>
    <string name="welcome_breedActivity">What kind of dog would you like to to see,</string>
    <string name="terrier_text">Terrier</string>
    <string name="spaniel_text">Spaniel</string>
    <string name="retriever_text">Retriever</string>
    <string name="poodle_text">Poodle</string>
</resources>
